poke/testsuite/poke.pkl/struct-types-defun-diag-1.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    int i;
    defun foo = void:
      {
        i = 2; /* { dg-error "invalid assignment" } */
      }
  };
